kubernetes/jupyter/04-ingressroutes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jupyter
  labels:
    app: jupyter

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jpt.zzd.ai`)
      kind: Rule
      services:
        - name: jupyter
          port: 8888
      middlewares:
        - name: forward-auth
  tls:
    certResolver: default
