kubernetes/jupyter/ingressroutes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jupyter-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jpt.e2.pe`)
      kind: Rule
      services:
        - name: jupyter
          port: 8888
      middlewares:
        - name: https-redirect
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jupyter-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jpt.e2.pe`)
      kind: Rule
      services:
        - name: jupyter
          port: 8888
      middlewares:
        - name: forward-auth
  tls:
    certResolver: default
